--- a/Customizable Unleashed Pack/mod.ini
+++ b/Customizable Unleashed Pack/mod.ini
@@ -1,7 +1,7 @@
 [Desc]
 Author="TheyCallMe_Pin & ZEROES_07"
 Title="Customizable Unleashed Pack"
-Version=1.0
+Version=Test
 Description="Customize!"
 Date="Unknown"
 AuthorURL=""
