--- a/Customizable Unleashed Pack/mod_version.ini
+++ b/Customizable Unleashed Pack/mod_version.ini
@@ -1,6 +1,6 @@
 [Main]
-VersionString="Test"
-DownloadSizeString="196 MB"
+VersionString="1.0"
+DownloadSizeString="0 MB"
 Markdown="changelog.md"
 [Changelog]
 StringCount=0
